src/pages/bookInformation/commentarySection/Comentarios.css
.comment {
  display: flex;
  align-items: start;
}
.comment--new {
  margin-bottom: var(--spacing-5);
}

.comment:not(.comment--new) {
  margin-bottom: var(--spacing-3);
}

.comment__image {
  width: 40px;
  border-radius: 50%;
  margin-right: var(--spacing-2);
}

.comment__image--i {
  border-radius: 40%;
}

.comment__right {
  width: 100%;
  padding: var(--spacing-2);
  border-radius: var(--border-rad-comp);
  background-color: var(--bg-surf-subtle-light);
  border: var(--border-2);
  box-shadow: 1px 1px 10px rgb(202, 200, 200);
}
.comment__textarea {
  width: 100%;
  max-width: 80ch;
  max-height: 200px;
  padding: var(--spacing-2);
  margin-top: var(--spacing-3);
  /* form-sizing: content; */
  resize: none;
  background: #f2f3f7;
  border-radius: var(--border-rad-comp);
  border: none;
}

.comment__author__desc,
.comment__author__name {
  font-size: var(--fs-2);
  font-weight: var(--fw-medium);
}

.comment__author__desc {
  color: #828282;
}

.comment__btns {
  display: flex;
}

.comment__btns button {
  margin-right: var(--spacing-3);
  margin-top: var(--spacing-3);
}

